@@ -9,4 +9,4 @@ dist
 doc/_build
 *.egg-info
 *.pyc
-
+*.jslex
