@@ -33,3 +33,4 @@ eggs = fanstatic
 recipe = zc.recipe.egg:scripts
 eggs =
      pojson >= 0.2
+     jslex >= 0.2.1
